--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <p>Нутрициолог, консультант по питанию</p>
             <p class="start-motto"><span class="start-motto-span">Изменив свой рацион - ты</span><br> изменишь свою <span class="shrift">РЕАЛЬНОСТЬ!</span></p>
             <button>Оставить заявку</button>
-            <p>Первая консультация <span class="pink">бесплатно</span></p>
+            <!-- Вертикальный текст на мобильных -->
+            <div class="start-consultation-badge">
+                <p>Первая консультация <span class="pink">бесплатно</span></p>
+            </div>
         </div>
         <img src="img/Airbrush-Image-Enhancer-1757521508544 1.png" alt="Елена Егорова"> 
     </section>
