--- a/index.html
+++ b/index.html
@@ -284,25 +284,25 @@
 
   <footer class="footer">
     <div class="footer-container">
-        <div class="footer-left">
-            <img src="img/Airbrush-Image-Enhancer-1757521508544 1.png" alt="Елена Егорова">
+      <div class="footer-left">
+        <img src="img/Airbrush-Image-Enhancer-1757521508544 1.png" alt="Елена Егорова">
+      </div>
+      <div class="footer-right">
+        <h2>Елена Егорова</h2>
+        <h3>Нутрициолог, консультант по питанию</h3>
+        <div class="footer-links">
+          <div class="footer-links-left">
+            <a href="#about">Обо мне</a>
+            <a href="#contacts" class="mobile-only">Контакты</a> <!-- Только на мобильных -->
+          </div>
+          <div class="footer-links-right">
+            <a href="#why">Почему я?</a>
+            <a href="#results">Результаты</a>
+          </div>
+          <button class="footer-btn">Записаться</button>
         </div>
-        <div class="footer-right">
-            <h2>Елена Егорова</h2>
-            <h3>Нутрициолог, консультант по питанию</h3>
-            <div class="footer-links">
-                <div class="footer-links-left">
-                    <a href="#about">Обо мне</a>
-                    <a href="#programs">Программы питания</a>
-                </div>
-                <div class="footer-links-right">
-                    <a href="#why">Почему я?</a>
-                    <a href="#results">Результаты</a>
-                </div>
-                <button class="footer-btn">Записаться</button>
-            </div>
-            <p class="footer-copyright">© 2025 КодРоста — продвижение бизнеса в России. Все права защищены</p>
-        </div>
+        <p class="footer-copyright">© 2025 КодРоста — продвижение бизнеса в России. Все права защищены</p>
+      </div>
     </div>
   </footer>
 </body>
